<resources>
    <string name="app_name">Intranet</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_edited">Already have an Account?</string>
    <string name="here_s_your_first_step_with_us">Here’s your first step with us!</string>
    <string name="new_post">New Post</string>
    <string name="create_new_post">Create New Post</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="search_user_by_name">Search User By Name</string>
    <string name="damn_no_results">Damn! No Results</string>
    <string name="maybe_you_should_try_another_words">Maybe you should try another words</string>
    <string name="add_a_friend">Add A Friend</string>
    <string name="friend">Friend</string>
    <string name="maybe_you_should_try_add_friends">Maybe you should try add friends</string>
    <string name="damn_no_friends">Damn! no friends</string>
    <string name="damn_no_posts">Damn! no posts</string>
    <string name="maybe_you_should_try_add_some_posts">Maybe you should try add some posts</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_password_to_make_changes">Enter password to make changes</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="update_password">Update Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="save_new_password">Save new password</string>
    <string name="remove_from_friends">Remove from friends</string>
    <string name="edit_post">Edit post</string>
</resources>