<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scaleType="centerCrop"
            android:src="@drawable/blank_user" />

        <RelativeLayout
            android:id="@+id/image_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:gravity="center"
            android:visibility="gone">

            <com.github.ybq.android.spinkit.SpinKitView
                style="@style/SpinKitView.Large.WanderingCubes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:SpinKit_Color="@color/colorAccent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/sign_out"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/sign_out" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_gravity="bottom"
            android:background="@drawable/top_rounded_bg">

            <LinearLayout
                android:id="@+id/profile_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingStart="35dp"
                android:paddingEnd="35dp">

                <EditText
                    android:id="@+id/profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:inputType="text"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/profile_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:inputType="text"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/save_changes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/update_profile" />

                <Button
                    android:id="@+id/update_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/update_password" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/enter_password_to_make_changes"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="22dp"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/update_profile" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/main_text_color"
                    android:text="@string/cancel" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/enter_current_password"
                    android:inputType="textPassword"
                    android:paddingStart="22dp"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:background="@null"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:paddingStart="22dp"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="35dp"
                    android:background="@null"
                    android:hint="@string/repeat_new_password"
                    android:inputType="textPassword"
                    android:paddingStart="22dp"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/update_password_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/save_new_password" />

                <Button
                    android:id="@+id/cancel_update_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/main_text_color"
                    android:text="@string/cancel" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/profile_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone">

                <com.github.ybq.android.spinkit.SpinKitView
                    style="@style/SpinKitView.Large.WanderingCubes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:SpinKit_Color="@color/colorAccent" />
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>